Sec45_ASS41: adding caching to Customer