@@ -4,6 +4,8 @@ import guru.springframework.spring6restmvc.mappers.CustomerMapper;
 import guru.springframework.spring6restmvc.model.CustomerDTO;
 import guru.springframework.spring6restmvc.repositories.CustomerRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.context.annotation.Primary;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
@@ -12,11 +14,11 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 /**
- * Created by jt, Spring Framework Guru.
+ * Modified by Pierrot, on 2024-11-02.
  */
+@Slf4j
 @Service
 @Primary
 @RequiredArgsConstructor
@@ -24,17 +26,23 @@ public class CustomerServiceJPA implements CustomerService {
     private final CustomerRepository customerRepository;
     private final CustomerMapper customerMapper;
 
+    @Cacheable(cacheNames = {"customerCache"})
     @Override
     public Optional<CustomerDTO> getCustomerById(UUID uuid) {
+        log.info("Get Customer by ID - in service");
+
         return Optional.ofNullable(customerMapper
                 .customerToCustomerDto(customerRepository.findById(uuid).orElse(null)));
     }
 
+    @Cacheable(cacheNames = {"customerListCache"})
     @Override
     public List<CustomerDTO> getAllCustomers() {
+        log.info("Get Customer List - in service");
+
         return customerRepository.findAll().stream()
                 .map(customerMapper::customerToCustomerDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
